--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "airtable": "^0.5.10",
+    "axios": "^0.18.0"
   },
   "engines": {
     "node": "8.x"
