--- a/shrinkwrap.yaml
+++ b/shrinkwrap.yaml
@@ -1,6 +1,7 @@
 dependencies:
   airtable: 0.5.10
   axios: 0.18.0
+  body-parser: 1.18.3
   express: 4.16.4
 packages:
   /accepts/1.3.5:
@@ -864,4 +865,5 @@ shrinkwrapVersion: 3
 specifiers:
   airtable: ^0.5.10
   axios: ^0.18.0
+  body-parser: ^1.18.3
   express: ^4.16.4
