--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express": "^4.16.4",
     "airtable": "^0.5.10",
     "axios": "^0.18.0",
-    "body-parser": "^1.18.3"
+    "body-parser": "^1.18.3",
+    "throat": "^4.1.0"
   },
   "engines": {
     "node": "8.x"
